Bug 327870 - Broken "Select All" keystroke or menu command
Summary: Broken "Select All" keystroke or menu command
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.3
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-20 15:46 UTC by Ralf Habacker
Modified: 2013-11-20 22:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-11-20 15:46:32 UTC
The menu command "Select all" do not select any widget of the currently displayed diagram. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add some widgets to a class diagram
3. select "select all" in Edit menu or press CTRL-A 
Actual Results:  
nothing is selected

Expected Results:  
all widgets should be selected
Comment 1 Ralf Habacker 2013-11-20 15:51:01 UTC
Git commit 40377231fd1fbb2fa23947a3c382996c9178dd16 by Ralf Habacker.
Committed on 20/11/2013 at 15:47.
Pushed by habacker into branch 'KDE/4.11'.

Fix 'select all' menu or key stroke command.
FIXED-IN:4.11.4

M  +1    -1    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/40377231fd1fbb2fa23947a3c382996c9178dd16
Comment 2 Ralf Habacker 2013-11-20 15:52:30 UTC
Git commit 80c4951140a617eb5b6a9b41ff1814744dfdaba9 by Ralf Habacker.
Committed on 20/11/2013 at 15:47.
Pushed by habacker into branch 'KDE/4.12'.

Fix 'select all' menu or key stroke command.
FIXED-IN:4.11.4
(cherry picked from commit 40377231fd1fbb2fa23947a3c382996c9178dd16)

M  +1    -1    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/80c4951140a617eb5b6a9b41ff1814744dfdaba9
Comment 3 Ralf Habacker 2013-11-20 22:11:08 UTC
Git commit 0f7746fcf3484095fb90f2ed07c22761fe4cf6bb by Ralf Habacker.
Committed on 20/11/2013 at 17:27.
Pushed by habacker into branch 'master'.

Fix 'Select all' right border too.

M  +1    -1    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/0f7746fcf3484095fb90f2ed07c22761fe4cf6bb
Comment 4 Ralf Habacker 2013-11-20 22:12:09 UTC
Git commit 90016eedc7fb7d32c357f532119af3642aafe741 by Ralf Habacker.
Committed on 20/11/2013 at 17:27.
Pushed by habacker into branch 'KDE/4.12'.

Fix 'Select all' right border too.
(cherry picked from commit 0f7746fcf3484095fb90f2ed07c22761fe4cf6bb)

M  +1    -1    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/90016eedc7fb7d32c357f532119af3642aafe741
Comment 5 Ralf Habacker 2013-11-20 22:13:17 UTC
Git commit e42eb08a04d829a6ae8a9374c19823d4e1ea2e4d by Ralf Habacker.
Committed on 20/11/2013 at 17:27.
Pushed by habacker into branch 'KDE/4.11'.

Fix 'Select all' right border too.
(cherry picked from commit 0f7746fcf3484095fb90f2ed07c22761fe4cf6bb)

M  +1    -1    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/e42eb08a04d829a6ae8a9374c19823d4e1ea2e4d