Fix 'select all' menu or key stroke command.

BUG:327870
FIXED-IN:4.11.4