umbrello/umlscene.cpp
@@ -1466,7 +1466,7 @@ void UMLScene::deleteSelection()
  */
 void UMLScene::selectAll()
 {
-    selectWidgets(0, 0, width(), height());
+    selectWidgets(sceneRect().x(), sceneRect().y(), width(), height());
 }
 
 /**
